--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
